# ComputerScience_UBA

./: .$Cronograma.drawio.bkp  .gitignore  Cronograma.drawio  Fondos.txt  README.md
Algo-2/Laboratorios/Labo_3/: CMakeLists.txt
Algo-2/Laboratorios/Labo_3/src/: Fecha.cpp
Algo-3/Apuntes/: Camino Minimo.md  TP2.md
Algo-3/TP1/: Ejercicio4.cpp
Algo-3/TP2/: Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp  Ejercicio3_Kruskal.cpp  Ejercicio3_Optimizado.cpp  Ejercicio3_Prim.cpp  Ejercicios.h  MaxST.cpp  Puentes.cpp  main.cpp
Algo-3/TP3/: Dijkstra.cpp  Ejercicio1.cpp  Ejercicio2  Ejercicio2.cpp  Ejercicio3.cpp  Ejercicio4.cpp
Algoritmos I/Laboratorios/Labo08/: CMakeLists.txt  cases.cpp  ejercicios.cpp
Algoritmos ll/Final-Algoll/: Algoritmos.md  Final 00-12-13.md  Final 01-12-13.md  Final 06-12-13.md  Final 08-03-23.md  Final 10-12-15.md  Final 22-07-14.md  Final 25-02-16.md  Final 30-07-15.md  Funcion Abstraccion.md  Hashing.md  Heapify.md
Algoritmos ll/Laboratorios/: Labo_8.txt
Algoritmos ll/TP3/: CMakeLists.txt
Algoritmos lll/.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
Algoritmos lll/Apuntes/: 1-Algoritmos, Complejidad y Backtraking.md  2-Tecnicas de diseño de Algoritmos.md  Convenciones.md
Algoritmos lll/Bibliografia/: Teóricas.md
Algoritmos lll/Excalidraw/: Drawing 2023-09-01 09.47.27.excalidraw.md  Drawing 2023-09-01 10.50.21.excalidraw.md  Drawing 2023-09-18 02.50.35.excalidraw.md  Drawing 2023-09-18 04.13.46.excalidraw.md  Drawing 2023-09-18 17.36.44.excalidraw.md  Drawing 2023-09-18 20.37.46.excalidraw.md  Drawing 2023-09-19 02.03.27.excalidraw.md  Drawing 2023-09-19 03.18.58.excalidraw.md
Algoritmos y Estructura de datos I/TP1/: solucion.tex
Algoritmos-3/TP2/: Ejercicio3_Kruskal  Ejercicio3_Kruskal.cpp  Ejercicio3_Optimizado
Algoritmos-3/TP3/: Ejercicio4  Ejercicio4.cpp
Cronograma/: .$Cronograma.drawio.bkp  Cronograma.drawio
Extras/Cmake no IDE/: CMakeLists.txt  main.cpp  vectores.cpp  vectores.h
Herramientas/Testing+CMake+Windows/Agenda/: CMakeLists.txt  Testing.txt
Herramientas/Testing+CMake+Windows/Agenda/src/: Agenda.cpp  Agenda.h  Fecha.cpp  Fecha.h  Horario.cpp  Horario.h  Includes.h  Recordatorio.cpp  Recordatorio.h
Herramientas/Testing+CMake+Windows/Agenda/test/: Agenda_test.cpp
Herramientas/Valgrind+Windows/: Instrucciones.txt
ISW1/: 7-MarsRoverLaVenganza.st  8-TusLibros.st  9-CustomerImporter.st
ISW1/Apuntes/: Heuristicas de Diseno.md
ISW1/Clase01_18-03/: Ejercicio1.st  Ejercicio2.st  Ejercicio3.st
ISW1/Clase02_21-03/: Ejercicio4.st
ISW1/Practica1/: Ejercicio4.st
ISW1/Practica2/: Numero-Exercise.st
ISW1/TDD/: Portfolio-Ejercicio.st  (+1 more)
Ingles II/: HW.txt
PagYTar/: ParcialHoni.md  ParcialPractica.md
(+400 files in other folders)
